c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/var_decl_missing_struct_kw.c
int main(void) {
    struct x;
    x y;  // you can't specify a structure type with just the tag; you need the
          // 'struct' specifier
    return 0;
}